# autonomous-driving

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  provision.sh
doc/reports/final/: Makefile  final-report_group3.bib  final-report_group3.tex
doc/talks/final/: Makefile  final-talk_group3.tex
doc/talks/lightning/AW/: Makefile  talk.tex
ecu/autonomousParking/run/: ecu.run  receiver.run  sub.run
ecu/autonomousParking/src/app/msct/: main.cpp  target.mk
ecu/autonomousParking/src/app/receiver/: main.cc  main.cpp  target.mk
ecu/autonomousParking/src/ecu/: CarInformation.h  Map.h  Parking.cc  Parking.h  main.cc  target.mk
ecu/autonomousParking/src/parking/: Parking.cc  Parking.h  main.cc  target.mk
genode/: .gitignore  Makefile  README  Vagrantfile  bootstrap.sh
genode/repos/base-focnados/config/: panda.kernel  pbxa9.kernel  x86_32.kernel  x86_64.kernel
genode/repos/base-focnados/etc/: specs.conf
genode/repos/base-focnados/mk/: l4_pkg.mk
genode/repos/base-focnados/ports/: focnados.hash  focnados.port
genode/tool/: create_builddir
genode/tool/builddir/etc/: build.conf.focnados_panda  build.conf.focnados_pbxa9  build.conf.focnados_rpi  build.conf.focnados_x86_64
genode/tool/run/boot_dir/: focnados
repos/base-focnados/config/: rpi.kernel
repos/base-focnados/lib/mk/: l4re_support.mk  platform.inc
repos/base-focnados/mk/spec/: focnados_x86_64.mk
repos/base/src/core/: ram_session_component.cc  trace_session_component.cc
repos/libports/include/lwip/: lwipopts.h
simulators/speed-dreams/cmake/: checks.cmake  options.cmake  thirdpartydeps.cmake
src/: sd2.cc
tools/QEMU-SA-VM/run/: savm.run
tools/SimCoupler/: .gitmodules  README.md
tools/SimCoupler/inc/: master_sim.hh  savm.hh  sd2.hh  sumo.hh  vrep.hh
tools/SimCoupler/protobuf-messages/: README.md  setup.proto  state.proto
tools/SimCoupler/src/: main.cc  savm.cc  sumo.cc  vrep.cc
tools/protobuf/: Makefile  control.proto  sensor.proto  specification.proto  state.proto  wheel.proto
(+64 files in other folders)
